<resources>
    <string name="app_name">Akukasir</string>
    <string name="home_title">Akukasir</string>
    <string name="home_subtitle">Suitable App For Your Store</string>
    <string name="product">Produk</string>
    <string name="string_penjualan">Catatan untuk berbagai Pengeluaran yang dibayar oleh toko</string>
    <string name="string_terima_stok">catatan saat terima stok dari </string>
    <string name="string_produksi">Memproduksi Item untuk ditampilkan di dalam menu</string>
    <string name="string_inventory">Data Semua Bahan Baku di toko</string>
    <string name="string_transfer">Memindahkan Bahan Baku</string>
    <string-array name="customer_categories">
        <item>Anggota</item>
        <item>Umum</item>
        <item>Online</item>
        <item>Reseller</item>
        <item>Mitra</item>
    </string-array>
    <string-array name="conversion_list">
        <item>Contoh 1</item>
        <item>Contoh 2</item>
    </string-array>
    <string name="cashier">Kasir</string>
    <string name="order_history">Transaksi</string>
    <string name="list_order_history">Transaksi sudah dibayar</string>
    <string name="admin">Admin</string>
    <string name="delete_sales">Hapus Pesanan</string>
    <string name="cancel_sales">Batalkan Pesanan</string>
    <string name="print_laporan_harian_tunai">Print Laporan Harian Tunai</string>
    <string name="print_laporan_harian_debit">Print Laporan Harian Non Tunai</string>
    <string name="print_laporan_harian_website">Print Laporan Harian Website</string>
    <string name="print_laporan_harian_marketplace">Print Laporan Harian Marketplace</string>
    <string name="print_laporan_harian">Laporan Harian</string>
    <string name="print_laporan_produk">Laporan Produk Terjual</string>
    <string name="are_you_sure">Apakah anda yakin?</string>
    <string name="running_order">Transaksi Baru</string>
    <string name="print_order_list">Cetak List Pesanan</string>
    <string name="scan_printer">Scan Printer</string>
    <string name="select_printer">Pilih Printer</string>
    <string name="tes_printer">Tes Printer</string>
    <string name="currency">Rp.</string>
    <string name="menu">Menu</string>
    <string name="orders">Pesanan</string>
    <string name="dine_in">Ditempat</string>
    <string name="take_away">Bungkus</string>
    <string name="taken">Diambil</string>
    <string name="delivery">Diantar</string>
    <string name="place_order">Bayar</string>
    <string name="save_order">Simpan</string>
    <string name="hold_order">Reservasi</string>
    <string name="hold_order_list">Daftar Reservasi</string>
    <string name="direct_invoice">Bill</string>
    <string name="select_customer">Pilih Konsumen</string>
    <string name="select_category">Pilih Kategori</string>
    <string name="add_customer">Tambah Konsumen</string>
    <string name="select_logistic">Pilih Pengiriman</string>
    <string name="fee_marketplace">Fee Marketplace</string>
    <string name="select_table">Pilih Meja</string>
    <string name="table_name">Meja:</string>
    <string name="cancel">Batalkan</string>
    <string name="back">Kembali</string>
    <string name="warning">Peringatan</string>
    <string name="zero">0</string>
    <string name="search">Cari menu</string>
    <string name="search_table">Cari meja</string>
    <string name="discount">Diskon</string>
    <string name="total_discount">Total Diskon</string>
    <string name="total_payable">Total Bayar</string>
    <string name="print_bill">Print Bill</string>
    <string name="split_bill">Pisahkan Bill</string>
    <string name="print_bill_close_order">Selesaikan Pesanan</string>
    <string name="finish_order">Selesaikan Pesanan</string>
    <string name="no_order">No. Pesanan</string>
    <string name="ppn">PPN</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_with_discount">Subtotal setelah Diskon</string>
    <string name="discount_added">Diskon Sudah Ditambahkan</string>
    <string name="discount_remove">Diskon Sudah Dihapus</string>
    <string name="subtotal_with_shipping">Subtotal setelah Ongkir</string>
    <string name="total">Total</string>
    <string name="total_alt">Total :</string>
    <string name="payment_method">Cara Pembayaran</string>
    <string name="paid_amount">Jumlah Pembayaran</string>
    <string name="due_amount">Jatuh Tempo</string>
    <string name="given_amount">Uang yang Diberikan</string>
    <string name="change_amount">Uang Kembalian</string>
    <string name="total_sales_today">Total Penjualah Hari ini</string>
    <string name="detail_order">Rincian Pesanan</string>
    <string name="update_order">Ubah Pesanan</string>
    <string name="cancel_order">Batalkan Pesanan</string>
    <string name="bill_no">Bill no.</string>
    <string name="price">Harga</string>
    <string name="qty">Qty</string>
    <string name="type">Tipe</string>
    <string name="customer">Konsumen</string>
    <string name="table">Meja</string>
    <string name="waiter">Pelayan</string>
    <string name="total_order">Jumlah Pesanan</string>
    <string name="service_charge">Layanan</string>
    <string name="use">Pakai</string>
    <string name="shipping_price">Ongkir</string>
    <string name="delete">Hapus</string>
    <string name="duarebu">Rp. 2.000</string>
    <string name="goceng">Rp. 5.000</string>
    <string name="ceban">Rp. 10.000</string>
    <string name="duapuluhrebu">Rp. 20.000</string>
    <string name="gocap">Rp. 50.000</string>
    <string name="cepe">Rp. 100.000</string>
    <string name="process_order_to_kitchet">Simpan pesanan ini?</string>
    <string name="sure_to_update_order">Yakin ingin mengubah data pesanan?</string>
    <string name="sure_to_split_bill">Yakin ingin pisahkan bill?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="label_login">Masuk</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">Email atau password yang dimasukkan tidak sesuai.</string>
    <string name="logout">Logout</string>
    <string name="close">Tutup</string>
    <string name="kitchen">Kitchen</string>
    <string name="bar">Bar</string>
    <string name="print_kot">Print KOT</string>
    <string name="double_click_to_exit">Tekan sekali lagi untuk keluar</string>
    <string name="pair_printer">Hubungkan printer</string>
    <string name="turn_on_bluetooth">Silahkan nyalakan bluetooth</string>
    <string name="pairing_printer">Sedang menghubungkan printer…</string>
    <string name="connected_with_printer">Terhubung dengan printer</string>
    <string name="disconnected_with_printer">Printer tidak terhubung</string>
    <string name="unable_connect_with_printer">Tidak dapat terhubung dengan printer</string>
    <string name="enable_print">Enable Printer</string>
    <string name="notes">Catatan</string>
    <string name="notes_here">Tulis catatan di sini</string>
    <string name="open_cashier_registration">Buka Laci Kasir</string>
    <string name="close_cashier_registration">Tutup Laci Kasir</string>
    <string name="cashier_closed">Berhasil tutup laci kasir</string>
    <string name="enter_your_opening_balance">Kasir belum terbuka, masukkan saldo awal Anda!</string>
    <string name="error_message">Terjadi kesalahan server</string>
    <string name="out_of_stock">Stock Bahan Kosong</string>
    <string name="shipping_price_added">Ongkir sudah ditambahkan</string>
    <string name="shipping_price_deleted">Ongkir sudah dihapus</string>
    <string name="hei">Hei,</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="customer_name">Nama Konsumen</string>
    <string name="plat_number">Plat Nomor</string>
    <string name="car_type">Tipe Mobil</string>
    <string name="handphone">Nomor Handphone</string>
    <string name="address">Alamat</string>
    <string name="setting_path_url">Configurasi Alamat URL</string>
    <string name="setting_path_url_note">Silahkan masukkan path url sebelum menggunakan aplikasi</string>
    <string name="open_app">Buka Aplikasi</string>
    <string name="print">Cetak</string>
    <string name="expense">Pengeluaran</string>
    <string name="add_expense">Buat Pengeluaran</string>
    <string name="total_expense_today">Total Pengeluaran Hari ini</string>
    <string name="amount">Nominal</string>
    <string name="description">Keterangan</string>
    <string name="date">Tanggal</string>
    <string name="summary_report_daily">Rangkuman Harian</string>
    <string name="summary_report_store">Rangkuman Toko</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="camera">Camera</string>
    <string name="camera_permission_granted">Akses kamera diizinkan</string>
    <string name="camera_permission_denied">Akses kamera ditolak</string>
    <string name="product_not_found">Produk tidak ditemukan</string>
    <string name="new_order">(Order Baru)</string>
    <string name="not_yet_paid_off">(Belum Lunas)</string>
    <string name="paid_off">(Lunas)</string>
    <string name="already_paid">Sudah dibayar</string>
    <string name="remaining_payment">Sisa belum dibayar</string>
    <string name="close_this_order">Selesaikan pesanan ini?</string>
    <string name="share_invoice">Share Bill</string>
    <string name="cart">Keranjang</string>
    <string name="view_cart">Lihat Keranjang</string>
    <string name="inventory_receive">Terima Stok</string>
    <string name="inventory_receive_list">Daftar Terima Stok</string>
    <string name="ingredient">Inventori</string>
    <string name="ingredient_name">Nama Inventori</string>
    <string name="purchase">Pembelian</string>
    <string name="supplier">Supplier</string>
    <string name="select_ingredient">Pilih Inventori</string>
    <string name="select_supplier">Pilih Supplier</string>
    <string name="select_product">Pilih Product</string>
    <string name="select_outlet">Pilih Outlet</string>
    <string name="production">Produksi</string>
    <string name="production_list">Daftar Produksi</string>
    <string name="inventory_production">Produksi Inventori</string>
    <string name="total_production">Total Produksi</string>
    <string name="add_production">Tambah Produksi</string>
    <string name="production_again_today">Produksi Lagi Hari ini</string>
    <string name="unit_price">Harga Satuan</string>
    <string name="add_purchase">Tambah Pembelian</string>
    <string name="total_purchase">Total Pembelian</string>
    <string name="purchase_from">Pembelian dari</string>
    <string name="purchase_number">No. Pembelian</string>
    <string name="outlet">Outlet</string>
    <string name="income_statement">Laporan Laba Rugi</string>
    <string name="summary_report">Rangkuman Laporan</string>
    <string name="summary_report_graphic">Laporan Grafis</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="add_new_product">Tambah Produk Baru</string>
    <string name="product_name">Nama Produk</string>
    <string name="optional_sku_product">SKU Product (Opsional)</string>
    <string name="main_category">Kategori Utama</string>
    <string name="product_category">Kategori Produk</string>
    <string name="inventory_used">Inventori yang digunakan</string>
    <string name="general_price">Harga Jual Umum</string>
    <string name="online_price">Harga Jual Online (Gojek, Grab)</string>
    <string name="optional_product_photo">Foto Produk (Opsional)</string>
    <string name="sale_pegawai">Harga Jual Karyawan</string>
</resources>