<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingScreen"
    tools:context=".mobile.DeleteSalesActivity">

    <LinearLayout
        android:id="@+id/lyt_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spaceBottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/order_history"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/mSearch"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layoutDirection="rtl"
                android:theme="@style/SearchView"
                app:defaultQueryHint="@string/search"
                app:queryBackground="@android:color/transparent" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_order_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lyt_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/paddingScreen"
        android:layout_marginTop="@dimen/paddingScreen"
        android:layout_marginEnd="@dimen/paddingScreen"
        android:layout_marginBottom="@dimen/paddingScreen"
        android:animateLayoutChanges="true"
        android:background="@drawable/alert_error"
        android:orientation="horizontal"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:visibility="invisible">

        <ImageButton
            android:id="@+id/btn_close_alert"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/warning"
            android:onClick="hideLoading"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/txt_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorTextPrimary"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />

</RelativeLayout>